--- a/lab1/Gemfile
+++ b/lab1/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+#gem 'ssl_requirement'
+gem 'bartt-ssl_requirement', '~>1.4.0', :require => 'ssl_requirement'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.1'
 
