Add gem fourmer; 3rd party code for Foursquare Oauth

--- a/lab1/Gemfile
+++ b/lab1/Gemfile
@@ -3,6 +3,10 @@ source 'https://rubygems.org'
 #gem 'ssl_requirement'
 gem 'bartt-ssl_requirement', '~>1.4.0', :require => 'ssl_requirement'
 
+#Foursquare library
+gem "fourmer", ">= 0"
+
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.1'
 
